# iota

./: .dockerignore  .eslintrc.js  .gitignore  .typos.toml  CONTRIBUTING.md  Cargo.toml  binary-build-list.json  deny.toml  dprint.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json  vercel.json
.changeset/: angry-tips-invite.md  brown-clocks-tickle.md  chilly-icons-flow.md  chilly-kings-wash.md  clever-crews-explode.md  config.json  cool-islands-buy.md  dull-birds-remain.md  empty-trains-judge.md  fast-llamas-return.md  fifty-baboons-cross.md  flat-suits-tie.md  four-pets-love.md  friendly-avocados-smell.md  fuzzy-rabbits-carry.md  healthy-cameras-argue.md  itchy-eyes-smoke.md  khaki-frogs-eat.md  late-laws-rest.md  light-dryers-matter.md  little-teachers-ring.md  mighty-pans-suffer.md  moody-experts-joke.md  ninety-gifts-decide.md  ninety-jokes-play.md  perfect-seahorses-tan.md  pink-dogs-scream.md  pretty-hounds-give.md  rich-singers-applaud.md  rotten-poems-tie.md  selfish-drinks-tell.md  shiny-guests-leave.md  sixty-mice-wink.md  sixty-points-itch.md  smart-rice-sort.md  spotty-chicken-film.md  stupid-hornets-ring.md  tender-boxes-drive.md  warm-eagles-count.md  witty-buttons-fold.md
.config/: nextest.toml
.github/: CODEOWNERS  crates-filters.yml  external-crates-filters.yml  labeler.yml  pull_request_template.md
.github/workflows/: _cargo_deny.yml  _docs_lint.yml  _docusaurus.yml  _e2e.yml  _execution_cut.yml  _external_rust_tests.yml  _ledgernano.yml  _move_examples_rdeps_tests.yml  _move_ide.yml  _move_tests.yml  _rosetta.yml  _rust.yml  _rust_examples.yml  _rust_lints.yml  _rust_tests.yml  _split_cluster.yml  _typos.yml  apps_apps-backend_prod_deploy.yml  apps_explorer_prod_deploy.yml  apps_wallet_dashboard_prod_deploy.yml  apps_wallet_nightly_build.yml  apps_wallet_prod_build.yml  apps_wallet_rc_build.yml  build_nightly.yml  cargo_llvm_cov.yml  changesets.yml  changesets_ci.yml  changesets_publish.yml  crate_docs.yml  develop_ci_slack_report.yml  hierarchy.yml  nightly.yml  pr_lint.yml  preview_wiki.yml  release.yml  release_docker.yml  release_fullnode_docker_setup.yml  release_move_ide.yml  release_notes_monitor.yml  release_wiki.yml  (+4 more)
apps/apps-backend/: package.json  tsconfig.json
apps/core/: package.json
apps/explorer/: .env.example  README.md  package.json  playwright.config.ts  tailwind.config.ts  vite.config.ts
apps/ui-icons/: CHANGELOG.md  README.md  package.json
apps/ui-kit/: CHANGELOG.md  README.md  package.json
apps/wallet/: README.md  package.json  playwright.config.ts  tailwind.config.ts
apps/wallet-dashboard/: README.md  ampli.json  instrumentation.ts  jest.config.ts  next.config.mjs  package.json  playwright.config.ts  prependlicense.mjs  sentry.common.config.mjs  tsconfig.json
chocolatey/: iota.nuspec
consensus/core/: Cargo.toml
consensus/simtests/: Cargo.toml
crates/iota-archival/: Cargo.toml
crates/iota-aws-orchestrator/: Cargo.toml
crates/iota-bridge/: Cargo.toml
crates/iota-bridge-indexer/: Cargo.toml  config.yaml
crates/iota-common/: Cargo.toml
crates/iota-config/: Cargo.toml
crates/iota-core/: Cargo.toml
crates/iota-data-ingestion/: Cargo.toml
crates/iota-data-ingestion-core/: Cargo.toml  README.md
crates/iota-e2e-tests/: Cargo.toml
crates/iota-faucet/: Cargo.toml
crates/iota-framework/: CONTRIBUTING.md  published_api.txt
crates/iota-framework-snapshot/: Cargo.toml  manifest.json
crates/iota-genesis-builder/: Cargo.toml
crates/iota-graphql-e2e-tests/: Cargo.toml
crates/iota-graphql-rpc/: Cargo.toml  (+2 more)
crates/iota-light-client/: Cargo.toml  README.md  devnet.yaml  mainnet.yaml  testnet.yaml
crates/iota-light-client/example_config/: light_client.yaml
crates/iota-light-client/src/: checkpoint.rs  config.rs  construct.rs  graphql.rs  main.rs  object_store.rs  proof.rs  utils.rs  verifier.rs
crates/iota-light-client/tests/: README.md  check_proof.rs
crates/iota-light-client/tests/fixtures/: 235.chk  235.sum  469.chk  469.sum  checkpoints.yaml  genesis.blob
docs/: README.md
docs/examples/rust/: Cargo.toml
docs/examples/rust/exchange/: derive-address.rs  get-balance.rs
docs/examples/rust/stardust/: basic-output-claim.rs  iota-self-sponsor.rs  nft-output-claim.rs
examples/custom-indexer/rust/: Cargo.toml  local_reader.rs  remote_reader.rs
iota-execution/: Cargo.toml
nre/: README.md  ssfn_guide.md  validator_tasks.md  validator_tool.md
scripts/: update_light_client_checkpoints.sh
sdk/: .env.defaults
(+2589 files in other folders)
