[package]
name = "docs-examples"
version = "0.1.0"
authors = ["IOTA Stiftung"]
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
# external dependencies
anyhow = "1.0"

# internal dependencies
iota-keys = { path = "../../../crates/iota-keys" }
iota-move-build = { path = "../../../crates/iota-move-build" }
iota-sdk = { path = "../../../crates/iota-sdk" }
move-binary-format = { path = "../../../external-crates/move/crates/move-binary-format", features = ["fuzzing"] }
shared-crypto = { path = "../../../crates/shared-crypto" }

[dev-dependencies]
# external dependencies
bcs = "0.1"
bip32 = "0.5"
serde_json = "1.0"
tokio = "1.43"

# internal dependencies
move-core-types = { path = "../../../external-crates/move/crates/move-core-types" }

[[example]]
name = "address-unlock-condition"
path = "stardust/address-unlock-condition.rs"

[[example]]
name = "nft-output-claim"
path = "stardust/nft-output-claim.rs"

[[example]]
name = "alias-output-claim"
path = "stardust/alias-output-claim.rs"

[[example]]
name = "basic-output-claim"
path = "stardust/basic-output-claim.rs"

[[example]]
name = "check-basic-output-unlock-conditions"
path = "stardust/check-basic-output-unlock-conditions.rs"

[[example]]
name = "alias-migration"
path = "stardust/alias-migration.rs"

[[example]]
name = "nft-migration"
path = "stardust/nft-migration.rs"

[[example]]
name = "foundry-output-claim"
path = "stardust/foundry-output-claim.rs"

[[example]]
name = "iota-self-sponsor"
path = "stardust/iota-self-sponsor.rs"
