[package]
name = "custom-indexer"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
# external dependencies
anyhow.workspace = true
async-trait.workspace = true
prometheus.workspace = true
tokio.workspace = true

# internal dependencies
iota-data-ingestion-core.workspace = true
iota-types.workspace = true

[[bin]]
name = "local_reader"
path = "local_reader.rs"

[[bin]]
name = "remote_reader"
path = "remote_reader.rs"
